// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WizardSyncAndFieldLevelValidation /> Render WizardSyncAndFieldLevelValidation (inputs) 1`] = `
Array [
  <input
    name="firstName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="First Name"
    type="text"
    value=""
  />,
  <input
    name="lastName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Last Name"
    type="text"
    value=""
  />,
]
`;

exports[`<WizardSyncAndFieldLevelValidation /> Render WizardSyncAndFieldLevelValidation: store of wizard 1`] = `
Object {
  "values": Object {
    "firstName": undefined,
    "lastName": undefined,
  },
  "wizard": Object {
    "errorsMap": Object {},
    "hasErrors": false,
    "hasWarnings": false,
    "warningsMap": Object {},
  },
}
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit failed on page 1 (errors in wizard === errors in step1) 1`] = `
Object {
  "values": Object {
    "firstName": undefined,
    "lastName": undefined,
  },
  "wizard": Object {
    "errorsMap": Object {
      "firstName": "Field required.",
      "lastName": "Field required.",
    },
    "hasErrors": true,
    "hasWarnings": false,
    "warningsMap": Object {},
  },
}
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit failed on page 1 (render inputs) 1`] = `
Array [
  <input
    name="firstName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="First Name"
    type="text"
    value=""
  />,
  <input
    name="lastName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Last Name"
    type="text"
    value=""
  />,
]
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit failed on page 1 (store) 1`] = `
Object {
  "form": Object {
    "activeField": "",
    "blurred": false,
    "changed": false,
    "errorsMap": Object {
      "firstName": "Field required.",
      "lastName": "Field required.",
    },
    "focused": false,
    "hasErrors": true,
    "hasWarnings": false,
    "submitted": true,
    "warningsMap": Object {},
  },
  "meta": Object {
    "firstName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "Field required.",
      "focused": false,
      "warning": "",
    },
    "lastName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "Field required.",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "firstName": undefined,
    "lastName": undefined,
  },
}
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit failed on page 1, incorrect firstName (store) 1`] = `
Object {
  "form": Object {
    "activeField": "",
    "blurred": false,
    "changed": true,
    "errorsMap": Object {
      "firstName": "The minimum length of the value must be 3.",
      "lastName": "Field required.",
    },
    "focused": false,
    "hasErrors": true,
    "hasWarnings": false,
    "submitted": true,
    "warningsMap": Object {},
  },
  "meta": Object {
    "firstName": Object {
      "active": false,
      "blurred": false,
      "changed": true,
      "error": "The minimum length of the value must be 3.",
      "focused": false,
      "warning": "",
    },
    "lastName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "Field required.",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "firstName": "te",
    "lastName": undefined,
  },
}
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit field-level failed on 1 1`] = `
Object {
  "values": Object {
    "firstName": "t",
    "lastName": undefined,
  },
  "wizard": Object {
    "errorsMap": Object {
      "firstName": "The minimum length of the value must be 3.",
      "lastName": "Field required.",
    },
    "hasErrors": true,
    "hasWarnings": false,
    "warningsMap": Object {},
  },
}
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on 1, 2 (render inputs) 1`] = `
Array [
  <input
    name="dob"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Date of birthday"
    type="text"
    value=""
  />,
  <input
    name="hobby"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Hobby"
    type="text"
    value=""
  />,
]
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on 1, 2 (store of wizard) 1`] = `
Object {
  "values": Object {
    "dob": undefined,
    "email": "test",
    "firstName": "test",
    "hobby": undefined,
    "lastName": "test",
    "phone": "test",
  },
  "wizard": Object {
    "errorsMap": Object {},
    "hasErrors": false,
    "hasWarnings": false,
    "warningsMap": Object {},
  },
}
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on 1, 2, 3 (store 3) 1`] = `
Object {
  "form": Object {
    "activeField": "",
    "blurred": false,
    "changed": true,
    "errorsMap": Object {},
    "focused": false,
    "hasErrors": false,
    "hasWarnings": false,
    "submitted": true,
    "warningsMap": Object {},
  },
  "meta": Object {
    "dob": Object {
      "active": false,
      "blurred": false,
      "changed": true,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "hobby": Object {
      "active": false,
      "blurred": false,
      "changed": true,
      "error": "",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "dob": "test",
    "hobby": "test",
  },
}
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on 1, 2, 3 (store of wizard) 1`] = `
Object {
  "values": Object {
    "dob": "test",
    "email": "test",
    "firstName": "test",
    "hobby": "test",
    "lastName": "test",
    "phone": "test",
  },
  "wizard": Object {
    "errorsMap": Object {},
    "hasErrors": false,
    "hasWarnings": false,
    "warningsMap": Object {},
  },
}
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on 1, failed on 2 (render inputs) 1`] = `
Array [
  <input
    name="phone"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Phone"
    type="text"
    value=""
  />,
  <input
    name="email"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Email"
    type="text"
    value=""
  />,
]
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on 1, failed on 2 (store 2) 1`] = `
Object {
  "form": Object {
    "activeField": "",
    "blurred": false,
    "changed": false,
    "errorsMap": Object {
      "email": "Field required.",
      "phone": "Field required.",
    },
    "focused": false,
    "hasErrors": true,
    "hasWarnings": false,
    "submitted": true,
    "warningsMap": Object {},
  },
  "meta": Object {
    "email": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "Field required.",
      "focused": false,
      "warning": "",
    },
    "phone": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "Field required.",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "email": undefined,
    "phone": undefined,
  },
}
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on 1, failed on 2 (store of wizard) 1`] = `
Object {
  "values": Object {
    "email": undefined,
    "firstName": "test",
    "lastName": "test",
    "phone": undefined,
  },
  "wizard": Object {
    "errorsMap": Object {
      "email": "Field required.",
      "phone": "Field required.",
    },
    "hasErrors": true,
    "hasWarnings": false,
    "warningsMap": Object {},
  },
}
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on 1, failed on 2, click prevent (render inputs) 1`] = `
Array [
  <input
    name="firstName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="First Name"
    type="text"
    value="test"
  />,
  <input
    name="lastName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Last Name"
    type="text"
    value="test"
  />,
]
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on 1, failed on 2, click prevent (store of wizard) 1`] = `
Object {
  "values": Object {
    "email": undefined,
    "firstName": "test",
    "lastName": "test",
    "phone": "test",
  },
  "wizard": Object {
    "errorsMap": Object {
      "email": "Field required.",
    },
    "hasErrors": true,
    "hasWarnings": false,
    "warningsMap": Object {},
  },
}
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on 1, failed on 2, click prevent page (render inputs) 1`] = `
Array [
  <input
    name="firstName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="First Name"
    type="text"
    value="test"
  />,
  <input
    name="lastName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Last Name"
    type="text"
    value="test"
  />,
]
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on 1, failed on 2, click prevent page (store of wizard) 1`] = `
Object {
  "values": Object {
    "email": undefined,
    "firstName": "test",
    "lastName": "test",
    "phone": undefined,
  },
  "wizard": Object {
    "errorsMap": Object {
      "email": "Field required.",
      "phone": "Field required.",
    },
    "hasErrors": true,
    "hasWarnings": false,
    "warningsMap": Object {},
  },
}
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on 1, failed on 2, click prevent page, submit success on 1 (render inputs) 1`] = `
Array [
  <input
    name="phone"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Phone"
    type="text"
    value=""
  />,
  <input
    name="email"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Email"
    type="text"
    value=""
  />,
]
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on 1, failed on 2, click prevent page, submit success on 1 (store 2) 1`] = `
Object {
  "form": Object {
    "activeField": "",
    "blurred": false,
    "changed": false,
    "errorsMap": Object {},
    "focused": false,
    "hasErrors": false,
    "hasWarnings": false,
    "submitted": false,
    "warningsMap": Object {},
  },
  "meta": Object {
    "email": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "phone": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "email": undefined,
    "phone": undefined,
  },
}
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on 1, failed on 2, click prevent, success on 1 (render inputs) 1`] = `
Array [
  <input
    name="phone"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Phone"
    type="text"
    value="test"
  />,
  <input
    name="email"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Email"
    type="text"
    value=""
  />,
]
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on page 1 (render inputs) 1`] = `
Array [
  <input
    name="phone"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Phone"
    type="text"
    value=""
  />,
  <input
    name="email"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Email"
    type="text"
    value=""
  />,
]
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on page 1 (store of step1) 1`] = `
Object {
  "form": Object {
    "activeField": "",
    "blurred": false,
    "changed": true,
    "errorsMap": Object {},
    "focused": false,
    "hasErrors": false,
    "hasWarnings": false,
    "submitted": true,
    "warningsMap": Object {},
  },
  "meta": Object {
    "firstName": Object {
      "active": false,
      "blurred": false,
      "changed": true,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "lastName": Object {
      "active": false,
      "blurred": false,
      "changed": true,
      "error": "",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "firstName": "test",
    "lastName": "test",
  },
}
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on page 1 (store of step2) 1`] = `
Object {
  "form": Object {
    "activeField": "",
    "blurred": false,
    "changed": false,
    "errorsMap": Object {},
    "focused": false,
    "hasErrors": false,
    "hasWarnings": false,
    "submitted": false,
    "warningsMap": Object {},
  },
  "meta": Object {
    "email": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "phone": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "email": undefined,
    "phone": undefined,
  },
}
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on page 1 (store of wizard) 1`] = `
Object {
  "values": Object {
    "email": undefined,
    "firstName": "test",
    "lastName": "test",
    "phone": undefined,
  },
  "wizard": Object {
    "errorsMap": Object {},
    "hasErrors": false,
    "hasWarnings": false,
    "warningsMap": Object {},
  },
}
`;

exports[`<WizardSyncAndFieldLevelValidation /> submit success on page 1, 2, 3 (onSubmit) 1`] = `
Array [
  Array [
    Object {
      "actions": Object {
        "arrayPush": [Function],
        "arrayRemove": [Function],
        "blur": [Function],
        "change": [Function],
        "changeSubmitted": [Function],
        "focus": [Function],
        "registerField": [Function],
        "registerForm": [Function],
        "removeField": [Function],
        "removeForm": [Function],
        "resetForm": [Function],
        "setInitialValues": [Function],
        "updateFormState": [Function],
        "updateValidateAndWarningMessages": [Function],
        "updateValidateMessage": [Function],
        "updateValidateMessages": [Function],
        "updateWarningMessage": [Function],
        "updateWarningMessages": [Function],
      },
      "state": Object {
        "form": Object {
          "activeField": "",
          "blurred": false,
          "changed": true,
          "errorsMap": Object {},
          "focused": false,
          "hasErrors": false,
          "hasWarnings": false,
          "submitted": true,
          "warningsMap": Object {},
        },
        "meta": Object {
          "dob": Object {
            "active": false,
            "blurred": false,
            "changed": true,
            "error": "",
            "focused": false,
            "warning": "",
          },
          "hobby": Object {
            "active": false,
            "blurred": false,
            "changed": true,
            "error": "",
            "focused": false,
            "warning": "",
          },
        },
        "values": Object {
          "dob": "test",
          "hobby": "test",
        },
      },
      "values": Object {
        "dob": "test",
        "hobby": "test",
      },
      "wizard": Object {
        "values": Object {
          "dob": "test",
          "email": "test",
          "firstName": "test",
          "hobby": "test",
          "lastName": "test",
          "phone": "test",
        },
        "wizard": Object {
          "errorsMap": Object {},
          "hasErrors": false,
          "hasWarnings": false,
          "warningsMap": Object {},
        },
      },
    },
  ],
]
`;
